# petit

./: .gitignore  CLAUDE.md  CODEBASE_REVIEW.md  Cargo.toml  Makefile  PLAN.md  README.md  SPEC.md  api.md  plan.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: dag_execution.rs  scheduler.rs  storage.rs
examples/cluster-jobs/: cluster-health.yaml  log-cleanup.yaml  personal-os-sync.yaml  storage-check.yaml  time-sync.yaml
examples/jobs/: minute_tick.yaml  system_monitor.yaml
migrations/: 001_initial_schema.sql
src/: lib.rs  main.rs
src/api/: errors.rs  handlers.rs  mod.rs  responses.rs
src/config/: builder.rs  error.rs  mod.rs  types.rs  yaml.rs
src/core/: context.rs  dag.rs  environment.rs  job.rs  mod.rs  resource.rs  retry.rs  schedule.rs  task.rs  types.rs
src/events/: mod.rs
src/execution/: command.rs  dag_executor.rs  executor.rs  mod.rs
src/scheduler/: engine.rs  handle.rs  handlers.rs  mod.rs  types.rs
src/storage/: memory.rs  mod.rs  sqlite.rs
src/testing/: mod.rs
src/tui/: app.rs  error.rs  event.rs  mod.rs  reader.rs  theme.rs
src/tui/ui/: layout.rs  mod.rs
src/tui/ui/tabs/: events.rs  jobs.rs  mod.rs  runs.rs  tasks.rs
src/tui/ui/widgets/: help_bar.rs  help_overlay.rs  mod.rs  status_bar.rs  tab_bar.rs
tests/: integration.rs  yaml_api_sketch.rs
tests/common/: mod.rs
tests/integration/: api.rs  recovery.rs  resources.rs  shutdown.rs  workflow.rs
